# Algorithm-Desing

./: README.md
full-bridge-converter/: README.md
pedometer/: pedometer.sln
pedometer/pedometer/: main.c  pedometer.vcxproj
pedometer/pedometer/x64/Debug/: pedometer.exe.recipe  pedometer.ilk  vc143.idb
pedometer/pedometer/x64/Debug/pedometer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pedometer.lastbuildstate
sha256-image/: CMakeLists.txt  main.cpp  sha256.h
